CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(PkgConfig)
INCLUDE(CheckFunctionExists)

SET(MODLUA_VERSION "51" CACHE STRING "MODLUA_VERSION from ports tree.")

PKG_CHECK_MODULES(LUA REQUIRED "lua${MODLUA_VERSION}")

CHECK_FUNCTION_EXISTS("pledge" HAVE_PLEDGE)
CHECK_FUNCTION_EXISTS("arc4random" HAVE_ARC4RANDOM)
CHECK_FUNCTION_EXISTS("arc4random_uniform" HAVE_ARC4RANDOM_UNIFORM)
CONFIGURE_FILE("${CMAKE_SOURCE_DIR}/config.h.in"
  "${CMAKE_SOURCE_DIR}/include/lua-pledge/config.h")


SET(SOURCES "src/lua-openbsd.c")
SET(HEADERS "include/lua-pledge/config.h")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
  ${LUA_INCLUDE_DIRS})

SET(TARGET "openbsd")

ADD_LIBRARY(${TARGET} SHARED ${SOURCES} ${HEADERS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(${TARGET} ${LUA_LIBRARIES} ${LUA_LDFLAGS})
